# BakkesModSDK

./: README.md
python/: CMakeLists.txt  pyproject.toml  setup.py
python/bakkesmod/: __init__.py
python/bindings/: core_structs.cpp  engine_wrappers.cpp  enums.cpp  game_event_wrappers.cpp  game_object_wrappers.cpp  game_wrapper.cpp  items_wrappers.cpp  main.cpp  misc_wrappers.cpp  wrappers.cpp
python/examples/: basic_plugin.py  cvars_and_notifiers.py  event_hooks.py  game_state.py  http_requests.py  items_loadout.py  mmr_and_rank.py  rendering.py  training_tools.py
